Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,3 +13,4 @@ resources:
 steps:
 - checkout: DevOps_CI
 - script: ls $(System.DefaultWorkingDirectory)
+- script: cat Wpp2Manifests/development/wpp2delivery.yaml
