--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
 
 - script: ls $(System.DefaultWorkingDirectory)
 - script: cat wpp2delivery.yaml
-- script: sed -i "s/$IMAGE_GENERATED/$(IMAGEMM)/g" ./wpp2delivery.yaml
+- script: sed -i "s/$IMAGE_GENERATED/"$(IMAGEMM)"/g" ./wpp2delivery.yaml
 - script: cat wpp2delivery.yaml
