--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ pool:
 
 variables:
 - name: IMAGEMM
-  value: "emersonhnt/wpp2-delivery:dev-build-12312"
+  value: "CARLOS"
 resources:
   repositories:
   - repository: DevOps_CI
@@ -24,5 +24,5 @@ steps:
 
 - script: ls $(System.DefaultWorkingDirectory)
 - script: cat wpp2delivery.yaml
-- script: sed -i "s/$IMAGE_GENERATED/"$(IMAGEMM)"/g" ./wpp2delivery.yaml
+- script: sed -i "s/$IMAGE_GENERATED/$(IMAGEMM)/g" ./wpp2delivery.yaml
 - script: cat wpp2delivery.yaml
