Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ pool:
 
 variables:
 - name: IMAGEMM
-  value: "CARLOS"
+  value: "emersonhnt/wpp2-delivery:dev-build-123"
 resources:
   repositories:
   - repository: DevOps_CI
