--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
 
 - script: ls $(System.DefaultWorkingDirectory)
 - script: cat wpp2delivery.yaml
-- script: sed -i "s/{{GENIMAGE}}/$(IMAGEMM)/g" wpp2delivery.yaml
+- script: sed -i "s!{{GENIMAGE}}!$(IMAGEMM)!g" wpp2delivery.yaml
 - script: cat wpp2delivery.yaml
