Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,4 +7,4 @@ pool:
 
 
 steps:
-
+  script: echo [$Build.DefinitionName]($(env)-$(Build.BuildId)) ($(Build.SourceBranchName)) is being deployed by $Build.RequestedFor
